Fix overflow problem
Using overflow: auto for now to be able to work with the calculator and
try different things, calculations and such, but this is probably a
temporary solution because it does not look great.

--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ button {
   align-items: center;
   font-family: "Micro 5", Arial, sans-serif;
   font-size: 10rem;
-  overflow: hidden;
+  overflow: auto;
   height: 30%;
   width: 100%;
   background-color: #d2d5da;
@@ -73,6 +73,12 @@ button {
   border-bottom: 0.02em solid #333;
   border-right: 0.02em solid #333;
   box-shadow: inset 0.03em 0.03em 0.04em rgba(0, 0, 0, 0.5);
+}
+
+.display .content {
+  text-align: right;
+  width: 80%;
+  height: 80%;
 }
 
 .buttons {
